--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,123 @@
 .App {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: gray;
+  margin: -10px;
+  overflow: hidden;
+  padding-bottom: 25px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@media screen and (max-width: 393px) {
+  .App {
+    margin: -10px;
+    overflow: auto;
+    background-color: rgb(219, 150, 219);
+  }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .cont-main {
+    width: 270px !important;
+    height: 443px !important;
+    padding: 23px !important;
+    border-radius: 20px !important;
+    border-bottom-right-radius: 30% !important;
+  }
+
+  .form-cont {
+    width: 250px !important;
+  }
+
+  .details {
+    font-size: 30px !important;
+    font-weight: 600 !important;
+    font-family: "Poppins", sans-serif !important;
+    font-style: italic !important;
+    padding-left: 20px;
+  }
+
+  .input-tag {
+    width: 60px !important;
+    height: 30px !important;
+    font-size: 16px !important;
+  }
+
+  .errmessage {
+    font-size: 14px !important;
+    margin: 5px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.cont-main {
+  height: 500px;
+  width: 500px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  border-bottom-right-radius: 25%;
+  padding: 50px;
+}
+
+.form-cont {
+  display: flex;
+  justify-content: space-between;
+  width: 515px;
+}
+
+.input-cont {
   display: flex;
   flex-direction: column;
+}
+
+.input-tag {
+  width: 90px;
+  height: 30px;
+  outline: none;
+  border: 2px solid gray;
+  border-radius: 5px;
+  padding: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  margin-top: 10px;
+}
+
+.leb-txt {
+  color: grey;
+}
+
+.sb-part {
+  display: flex;
+  margin-top: 10px;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.line {
+  width: 100%;
+  height: 2px;
+  border-radius: 2px;
+  background-color: grey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.but-sbt {
+  background-color: rgb(97, 97, 207);
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+.details {
+  font-size: 50px;
+  font-weight: 800;
+  font-family: "Poppins", sans-serif;
+  font-style: italic;
+}
+
+.dash {
+  color: blue;
+}
+
+.errmessage {
+  color: rgb(231, 44, 44);
+  font-size: 17px;
 }
